test/classes/forwarding/forwardToNonVar.good
forwardToNonVar.chpl:4: syntax error: near '('
